# tensorflow-federated

./: .bazelrc  .clangd  .gitignore  AUTHORS  BUILD  BUILD.bazel  Build.go  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  WORKSPACE  pyproject.toml  requirements-test.txt  requirements.in  requirements.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  workspace.bzl
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yaml  publish_release.yaml  test.yaml  test_build.yaml  test_package.yaml  test_project.yaml  test_python_package.yaml
docs/: BUILD  _book.yaml  _index.yaml  _project.yaml  deployment.md  faq.md  federated_core.md  federated_learning.md  gcp_setup.md  get_started.md  golden_tests.md  install.md  multiframework.md  presentations.md  pytype.md  setup.md  tff_for_research.md
docs/api_docs/python/: _toc.yaml  index.md  tff.md
docs/collaborations/: README.md
docs/collaborations/notes/: 2022-02-16.md  2022-07-14.md  2022-07-28.md  2022-08-11.md  2022-08-24.md  2022-09-08.md  2022-09-22.md  2022-09.29.md  2022-10-13.md
docs/design/: backend.dot  backend.md  compilation.md  context.md  execution.md  life_of_a_computation.md  package_structure.dot  package_structure.md  package_structure_analytics.dot  package_structure_core.dot  package_structure_learning.dot  package_structure_overview.dot  package_structure_simulation.dot  tracing.md
docs/experimental/tutorials/: BUILD  README.md  jax_support.ipynb
docs/learning/: federated_program_guide.md
docs/openmined2020/: BUILD  openmined_conference_2020.ipynb
docs/program/: components.dot  concepts.dot  federated_program.md  guide.md
docs/tutorials/: BUILD  README.md  building_your_own_federated_learning_algorithm.ipynb  composing_learning_algorithms.ipynb  core_training.ipynb  custom_aggregators.ipynb  custom_federated_algorithm_with_tff_optimizers.ipynb  custom_federated_algorithms.ipynb  custom_federated_algorithms_1.ipynb  custom_federated_algorithms_2.ipynb  federated_learning_for_image_classification.ipynb  federated_learning_for_text_generation.ipynb  federated_learning_with_differential_privacy.ipynb  federated_reconstruction_for_matrix_factorization.ipynb  federated_select.ipynb  high_performance_simulation_with_kubernetes.ipynb  jax_support.ipynb  loading_remote_data.ipynb  loading_your_own_dataset_from_csv.ipynb  private_heavy_hitters.ipynb  random_noise_generation.ipynb  simulations.ipynb  simulations_with_accelerators.ipynb  sparse_federated_learning.ipynb  tff_for_federated_learning_research_compression.ipynb  tuning_recommended_aggregators.ipynb  tutorials_overview.md  working_with_client_data.ipynb
engine/: README.md  publish.sh
examples/: README.md
examples/custom_data_backend/: BUILD  data_backend_example.cc  data_backend_example.h
examples/datasets/: BUILD
examples/personalization/: BUILD  README.md  emnist_p13n_main.py  p13n_utils_test.py
examples/program/: BUILD  computations.py  program.py  program_logic.py  program_logic_test.py
examples/simple_fedavg/: BUILD  README.md  emnist_fedavg_main.py  simple_fedavg_test.py  simple_fedavg_tf.py  simple_fedavg_tff.py
examples/stateful_clients/: BUILD  README.md  emnist_fedavg_main.py  stateful_fedavg_test.py  stateful_fedavg_tf.py  stateful_fedavg_tff.py
ifed/: README.md
tensorflow_federated/: .pylintrc  BUILD  __init__.py  build_defs.bzl  requirements-test.txt  version.py  version_check.bzl  workspace.bzl
tensorflow_federated/cc/: __init__.py
tensorflow_federated/data/: BUILD  README.md  __init__.py
tensorflow_federated/experimental/: BUILD  README.md  __init__.py
tensorflow_federated/proto/: BUILD  __init__.py
tensorflow_federated/python/: BUILD  __init__.py  sanity_test.py
tensorflow_federated/tools/: BUILD  build.sh  build_defs.bzl  build_docs.py  build_pip_package.sh  increment_version.sh  release.sh  setup.py
tensorflow_federated_research/: BUILD
tensorflow_federated_research/adaptive_lr_decay/: BUILD  README.md  adaptive_fed_avg.py  adaptive_fed_avg_test.py  callbacks_test.py  federated_trainer.py
tensorflow_federated_research/analytics/: BUILD  wordcount.ipynb
tensorflow_federated_research/compression/: BUILD  README.md  run_experiment.py  sparsity.py  sparsity_test.py
tensorflow_federated_research/differential_privacy/: BUILD
tensorflow_federated_research/flars/: BUILD  flars_fedavg.py  flars_fedavg_test.py  flars_optimizer_test.py  run_emnist.py
tensorflow_federated_research/gans/: BUILD  gan_losses.py  gan_training_tf_fns.py  gan_training_tf_fns_test.py  one_dim_gan.py  tff_gans.py  tff_gans_test.py  training_loops.py  training_loops_test.py
tensorflow_federated_research/optimization/: README.md
tensorflow_federated_research/personalization/: BUILD  README.md  p13n_utils.py  p13n_utils_test.py  run_emnist_p13n.py
tensorflow_federated_research/robust_aggregation/: BUILD  README.md  robust_federated_aggregation.py  robust_federated_aggregation_test.py
tensorflow_federated_research/semi_cyclic_sgd/: BUILD  README.md  cyclic_bag_log_reg.py  run_experiment.sh
tensorflow_federated_research/targeted_attack/: BUILD  README.md  aggregate_fn.py  attacked_fedavg.py  attacked_fedavg_test.py  emnist_with_targeted_attack.py
tensorflow_federated_research/triehh/: BUILD  triehh_tf.py  triehh_tf_test.py  triehh_tff.py  triehh_tff_test.py
tensorflow_federated_research/utils/: BUILD  README.md  aggregate_fns_test.py  centralized_training_loop.py  centralized_training_loop_test.py  checkpoint_manager_test.py  checkpoint_utils_test.py  metrics_manager.py  metrics_manager_test.py  training_loop.py  training_loop_test.py  training_utils.py  training_utils_test.py  utils_impl.py  utils_impl_test.py
tools/: BUILD  build_defs.bzl  build_docs.py  increment_version.sh  update_version.sh
tools/python_package/: BUILD  build_python_package.sh  get_hermetic_python.sh  publish_python_package.sh  test_computation.py  test_python_package.sh
tools/python_version/: python_repo.bzl
(+2443 files in other folders)
