load("@python//:defs.bzl", "compile_pip_requirements")
load("@python_version_repo//:py_version.bzl", "REQUIREMENTS")
load("@rules_license//rules:license.bzl", "license")  # copybara:strip

license(
    name = "package_license",
    package_name = "tensorflow_federated",
)

licenses(["notice"])

exports_files([
    "copy.bara.sky",
    "LICENSE",
    "README.md",
])

filegroup(
    name = "pyproject_toml",
    srcs = ["pyproject.toml"],
    visibility = ["//tensorflow_federated/tools/python_package:python_package_tool"],
)

compile_pip_requirements(
    name = "requirements",
    extra_args = [
        "--allow-unsafe",
        "--build-isolation",
        "--rebuild",
    ],
    generate_hashes = True,
    requirements_in = "requirements.in",
    requirements_txt = REQUIREMENTS,
)
